examples/invalid/syntaxErr/function/noBodyAfterFuncs.wacc
# program missing body after function declaration
# Output:
# #syntax error#

#Program:#

begin
	int f() is
		return 0 
	end
end
	
